# lcc.live

./: .air.toml  .bazelignore  .bazelrc  .bazelrc.remote.example  .dockerignore  .doppler.yaml  .env  .gitignore  .golangci.yml  BUILD.bazel  CNAME  Dockerfile  MODULE.bazel  README.md  b  bcc.html  build.sh  bun.lockb  cameras.json  console.mjs  data.json  deploy.sh  fly.toml  fuzz-all.sh  go.mod  go.sum  helpers.go  index.html  index.js  index.mjs  index2.html  logo.html  main.go  main_test.go  manifest.json  nogo_config.json  notes.txt  package-lock.json  package.json  purge-cache.sh  (+10 more)
.buildkite/: README.md  pipeline.yml
.buildkite/scripts/: test.sh
.claude/skills/update-cams/: SKILL.md
.github/workflows/: README.md  android-ci.yml  ci.yaml  ci.yml  dependency_update.yaml  deploy.yml  fuzz.yml  go.yml  ios-ci.yml
android/: BUILD.bazel
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/live/lcc/android/: LccApplication.kt  MainActivity.kt
android/src/main/kotlin/live/lcc/android/data/model/: Camera.kt  CameraPageData.kt  Canyon.kt  MediaItem.kt  RoadCondition.kt  UDOTResponse.kt  WeatherStation.kt
android/src/main/kotlin/live/lcc/android/data/remote/: LccApiClient.kt
android/src/main/kotlin/live/lcc/android/data/repository/: CanyonRepository.kt  WeatherRepository.kt
android/src/main/kotlin/live/lcc/android/di/: AppModule.kt
android/src/main/kotlin/live/lcc/android/domain/: ConditionColors.kt  ConnectionStatusHelper.kt  GalleryHelpers.kt  MediaItemParser.kt  SlugHelper.kt  YouTubeUrlHelper.kt
android/src/main/kotlin/live/lcc/android/service/: ImagePollingService.kt  MetricsService.kt  NetworkMonitor.kt
android/src/main/kotlin/live/lcc/android/ui/components/: ConnectionStatusSheet.kt  EmptyStateView.kt  InitialLoadingView.kt  MediaCell.kt  RoadConditionsBanner.kt  ShimmerBox.kt  WeatherChip.kt  YouTubePlayer.kt  ZoomableImage.kt
android/src/main/kotlin/live/lcc/android/ui/screens/: CanyonTabScreen.kt  CanyonViewModel.kt  GalleryScreen.kt  MainScreen.kt
android/src/main/kotlin/live/lcc/android/ui/theme/: Color.kt  Theme.kt  Type.kt
android/src/main/kotlin/live/lcc/android/util/: Logger.kt
android/src/main/res/values/: strings.xml  themes.xml
android/src/main/res/values-night/: themes.xml
app/: app.server.mjs  camera.jsx  db.server.mjs  entry.server.jsx  root.jsx
app/routes/: bcc.jsx  healthcheck.jsx  index.jsx
app/routes/image/: $id.js
app/styles/: main.css
assets/: BUILD.bazel  image.ai  image.eps
cameras/: store.go
cmd/seed-neon/: BUILD.bazel  main.go
config/: litefs.yml
doc/: BAZEL.md  BUILDBUDDY_SETUP.md  CACHE_AND_VERSION.md  CACHE_OPTIMIZATION.md  CLOUDFLARE_CACHE_PURGE.md  DEPLOYMENT.md  DEVELOPMENT.md  FAST_ANALYSIS.md  NEON.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  REMOTE_CACHE_EXPLAINED.md
docs/: 01_data_models___canyons____camera____image___.md  02_in_memory_data_store___store___.md  03_web_server___routing__echo__.md  04_frontend_logic__javascript__.md  05_background_image_syncing_.md  06_concurrency_management___context____goroutines____sync___.md  07_embedded_assets___embed___.md  index.md
etc/: litefs.yml
fs/: BUILD.bazel  fs.go  fs_test.go
ios/: .gitignore
ios/fastlane/: Fastfile
ios/lcc/: APIService.swift  ConnectionStatusView.swift  GalleryFullScreenView.swift  ImagePreloader.swift  LCC.swift  MainView.swift  MediaItem.swift  MediaItemParser.swift  PhotoTabView.swift
ios/lcc.xcodeproj/: project.pbxproj
ios/lcc/Models/: RoadCondition.swift  WeatherStation.swift
ios/lcc/Services/: WeatherService.swift
ios/lcc/Utilities/: ConditionColors.swift
ios/scripts/: BUILD.bazel  ExportOptions.plist  deploy.sh
logger/: BUILD.bazel  logger.go
metrics/: BUILD.bazel  helpers.go  metrics.go
neon/: BUILD.bazel  neon.go  repository.go
prisma/: data.db  schema.prisma  seed.mjs
prisma/migrations/20221120191844_/: migration.sql
prisma/migrations/20241117220548_asdf/: migration.sql
prisma/prisma/: data.db
public/: index.html  index2.html  manifest.json  script.js
remix.init/: index.js  package-lock.json
scripts/: BUILD.bazel  deploy.sh  dev_output_runner.sh  generate-apple-touch-icon.sh  generate-favicon.sh  generate-share-image.sh
server/: BUILD.bazel  admin_routes.go  cache_helpers.go  camera_route.go  canyon_route.go  error_logger.go  healthcheck_router.go  image_route.go  json_helpers.go  metrics_middleware.go  server.go  server_fuzz_test.go  server_test.go  udot_route.go  version.go  version_route_test.go
static/: BUILD.bazel  admin.css  admin.js  image_gen.bzl  script.js  script.mjs  style.css
store/: BUILD.bazel  cameras.go  entry.go  models.go  models_test.go  store.go  store_bench_test.go  store_fuzz_test.go  store_test.go
style/: BUILD.bazel  style.go
templates/: _analytics.html.tmpl  _head_common.html.tmpl  admin.html.tmpl  camera.html.tmpl  canyon.html.tmpl
tools/: BUILD.bazel  binary_dir.bzl  external_repos.bzl  external_repos.json  host_tools.bzl  http_binary.bzl  script_helpers.bzl
udot/: BUILD.bazel  client.go  filters.go  poller.go
ui/: BUILD.bazel  ui.go
views/: canyon.html.tmpl
web/: .air.toml  BUILD.bazel  main.go  main_test.go  smoke_test.go  test_container.sh
web/assets/: image.psd
web/docs/: caching.md
web/fs/: BUILD.bazel  fs.go
web/logger/: BUILD.bazel  logger.go
web/metrics/: BUILD.bazel  helpers.go  metrics.go
web/scripts/: BUILD.bazel  cleanup.sh  deploy.sh  dev_stop.sh  generate-favicon.sh  generate-share-image.sh
web/server/: BUILD.bazel  cache_helpers.go  camera_route.go  canyon_route.go  healthcheck_router.go  image_route.go  json_helpers.go  metrics_middleware.go  server.go  server_fuzz_test.go  server_test.go  udot_route.go  version_route.go
web/static/: BUILD.bazel  script.mjs  style.css
web/store/: BUILD.bazel  models.go  models_test.go  store.go  store_bench_test.go  store_test.go
web/style/: BUILD.bazel
web/templates/: BUILD.bazel  _head_common.html.tmpl  camera.html.tmpl  canyon.html.tmpl
web/udot/: BUILD.bazel  client.go  filters.go  poller.go
web/ui/: BUILD.bazel
(+5 files in other folders)
