load("@gazelle//:def.bzl", "gazelle", "gazelle_test")
load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test", "nogo")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

# gazelle:prefix github.com/stefanpenner/lcc-live
# gazelle:exclude tmp
# gazelle:exclude .git
gazelle(name = "gazelle")

# Test that BUILD files are up to date
gazelle_test(
    name = "gazelle_test",
    workspace = ":BUILD.bazel",
)

nogo(
    name = "nogo_linter",
    config = "nogo_config.json",
    visibility = ["//visibility:public"],
)

go_library(
    name = "lcc-live_lib",
    srcs = ["main.go"],
    embedsrcs = [
        "data.json",
        "static/favicon.png",
        "static/oops.png",
        "static/script.js",
        "static/style.css",
        "templates/canyon.html.tmpl",
        "templates/camera.html.tmpl",
    ],
    importpath = "github.com/stefanpenner/lcc-live",
    visibility = ["//visibility:private"],
    deps = [
        "//fs",
        "//server",
        "//store",
        "//style",
    ],
)

go_binary(
    name = "lcc-live",
    embed = [":lcc-live_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/stefanpenner/lcc-live/server.Version": "{STABLE_GIT_COMMIT}",
        "github.com/stefanpenner/lcc-live/server.BuildTime": "{STABLE_BUILD_TIMESTAMP}",
    },
)

# Linux binary for container builds
go_binary(
    name = "lcc-live-linux",
    embed = [":lcc-live_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/stefanpenner/lcc-live/server.Version": "{STABLE_GIT_COMMIT}",
        "github.com/stefanpenner/lcc-live/server.BuildTime": "{STABLE_BUILD_TIMESTAMP}",
    },
)

go_test(
    name = "lcc-live_test",
    srcs = ["main_test.go"],
    embed = [":lcc-live_lib"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

# Copy and rename the Linux binary for packaging
genrule(
    name = "lcc-live_renamed",
    srcs = [":lcc-live-linux"],
    outs = ["bin/lcc-live"],
    cmd = "cp $< $@",
    tags = ["manual"],
)

# Package the binary into a tar layer
pkg_tar(
    name = "lcc-live_layer",
    srcs = [":lcc-live_renamed"],
    mode = "0755",
    package_dir = "/usr/local/bin",
    strip_prefix = "bin",
    tags = ["manual"],
)

# Build OCI image
oci_image(
    name = "image",
    base = "@alpine_linux_amd64",
    entrypoint = ["/usr/local/bin/lcc-live"],
    env = {
        "PORT": "3000",
    },
    exposed_ports = ["3000/tcp"],
    tags = ["manual"],
    tars = [
        ":lcc-live_layer",
    ],
    # Security: Run as unprivileged user
    user = "nobody",
)

# Load into local Docker daemon
oci_load(
    name = "image_load",
    image = ":image",
    repo_tags = ["lcc.live:latest"],
    tags = ["manual"],
)

# Push to registry (for Fly.io deployment)
oci_push(
    name = "image_push",
    image = ":image",
    repository = "registry.fly.io/lcc-live-dark-paper-70",
    tags = ["manual"],
)

# Deployment script
sh_binary(
    name = "deploy",
    srcs = ["scripts/deploy.sh"],
    args = [
        "$(location :image_load)",
    ],
    data = [
        "fly.toml",
        ":image_load",
    ],
    tags = ["manual"],
)

# Container integration test
# Tests that the built OCI image actually works
sh_test(
    name = "container_test",
    srcs = ["test_container.sh"],
    data = [":image_load"],
    tags = [
        "integration",  # Integration test
        "local",  # Requires local Docker daemon
        "no-remote",
        "no-remote-exec",  # Explicitly prevent RBE execution
    ],
)
