load("@gazelle//:def.bzl", "gazelle", "gazelle_test")
load("@rules_go//go:def.bzl", "nogo")

# gazelle:prefix github.com/stefanpenner/lcc-live
# gazelle:exclude tmp
# gazelle:exclude .git
# gazelle:exclude ios
# gazelle:exclude android
gazelle(name = "gazelle")

# Test that BUILD files are up to date
gazelle_test(
    name = "gazelle_test",
    tags = ["no-remote-exec"],  # Runs platform-specific binary
    workspace = ":BUILD.bazel",
)

nogo(
    name = "nogo_linter",
    config = "nogo_config.json",
    visibility = ["//visibility:public"],
)

# Shared data files (used by both web server and as source of truth for iOS)
exports_files(
    ["data.json"],
    visibility = ["//visibility:public"],
)
