"""LCC Live Camera Service - Bazel Module"""

module(
    name = "lcc-live",
    version = "0.0.0",
)

# Go rules
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.3")

# Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_cespare_xxhash_v2",
    "com_github_charmbracelet_lipgloss",
    "com_github_labstack_echo_v4",
    "com_github_mitchellh_hashstructure",
    "com_github_prometheus_client_golang",
    "com_github_stretchr_testify",
)

