"""LCC Live Camera Service - Bazel Module"""

module(
    name = "lcc-live",
    version = "0.0.0",
)

# Go rules
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")

# Bazel library (explicit version to override transitive dependency from rules_oci)
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")

# OCI (container) rules
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# Shell rules for sh_binary and sh_test
bazel_dep(name = "rules_shell", version = "0.4.1")

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.5")
go_sdk.nogo(nogo = "//:nogo_linter")

# Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_cespare_xxhash_v2",
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_lipgloss",
    "com_github_charmbracelet_log",
    "com_github_getsentry_sentry_go",
    "com_github_getsentry_sentry_go_echo",
    "com_github_labstack_echo_v4",
    "com_github_mattn_go_isatty",
    "com_github_mitchellh_hashstructure",
    "com_github_prometheus_client_golang",
    "com_github_stretchr_testify",
)

# OCI base images
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Pull alpine base image with specific digest for reproducibility
oci.pull(
    name = "alpine",
    digest = "sha256:4bcff63911fcb4448bd4fdacec207030997caf25e9bea4045fa6c8c44de311d1",
    image = "docker.io/library/alpine",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "alpine", "alpine_linux_amd64", "alpine_linux_arm64_v8")

# Host tools for favicon generation
host_tools_ext = use_extension("//tools:host_tools.bzl", "host_tools_ext")
host_tools_ext.host_tool(
    name = "host_tools",
    default_paths = [
        "/opt/homebrew/bin",
        "/usr/local/bin",
        "/usr/bin",
    ],
    tools = [
        "rsvg-convert",
        "magick",
    ],
)
use_repo(host_tools_ext, host_tools = "host_tools")
