"""LCC Live Camera Service - Bazel Module"""

module(
    name = "lcc-live",
    version = "0.0.0",
)

# Go rules
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")

# Bazel library (explicit version to override transitive dependency from rules_oci)
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")

# OCI (container) rules
bazel_dep(name = "rules_oci", version = "2.2.6")
bazel_dep(name = "rules_pkg", version = "1.1.0")

# Shell rules for sh_binary and sh_test
bazel_dep(name = "rules_shell", version = "0.4.1")

# Go SDK
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.24.5")
go_sdk.nogo(nogo = "//:nogo_linter")

# Go dependencies from go.mod
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_cespare_xxhash_v2",
    "com_github_charmbracelet_bubbles",
    "com_github_charmbracelet_bubbletea",
    "com_github_charmbracelet_lipgloss",
    "com_github_charmbracelet_log",
    "com_github_getsentry_sentry_go",
    "com_github_getsentry_sentry_go_echo",
    "com_github_labstack_echo_v4",
    "com_github_mattn_go_isatty",
    "com_github_mitchellh_hashstructure",
    "com_github_prometheus_client_golang",
    "com_github_stretchr_testify",
    "org_golang_x_sync",
)

# OCI base images
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

# Pull alpine base image with specific digest for reproducibility
oci.pull(
    name = "alpine",
    digest = "sha256:4bcff63911fcb4448bd4fdacec207030997caf25e9bea4045fa6c8c44de311d1",
    image = "docker.io/library/alpine",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "alpine", "alpine_linux_amd64", "alpine_linux_arm64_v8")

# Android rules
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "rules_kotlin", version = "2.1.10")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "rules_java", version = "8.6.3")

# Android SDK toolchain
android_sdk_repository_extension = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension",
)
android_sdk_repository_extension.configure(
    api_level = 35,
    build_tools_version = "36.1.0",
)
use_repo(android_sdk_repository_extension, "androidsdk")
register_toolchains("@androidsdk//:sdk-toolchain")

# Maven dependencies for Android app
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    name = "android_maven",
    aar_import_bzl_label = "@rules_android//rules:rules.bzl",
    artifacts = [
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:2.1.20",
        "org.jetbrains.kotlin:kotlin-serialization-compiler-plugin-embeddable:2.1.20",
        "androidx.activity:activity-compose:1.9.3",
        "androidx.compose.ui:ui:1.7.6",
        "androidx.compose.ui:ui-graphics:1.7.6",
        "androidx.compose.ui:ui-text:1.7.6",
        "androidx.compose.ui:ui-unit:1.7.6",
        "androidx.compose.ui:ui-geometry:1.7.6",
        "androidx.compose.ui:ui-tooling-preview:1.7.6",
        "androidx.compose.runtime:runtime:1.7.6",
        "androidx.compose.runtime:runtime-saveable:1.7.6",
        "androidx.compose.animation:animation:1.7.6",
        "androidx.compose.animation:animation-core:1.7.6",
        "androidx.compose.material3:material3:1.3.1",
        "androidx.compose.foundation:foundation:1.7.6",
        "androidx.compose.foundation:foundation-layout:1.7.6",
        "androidx.compose.material:material-icons-extended:1.7.6",
        "androidx.compose.material:material-ripple:1.7.6",
        "androidx.lifecycle:lifecycle-viewmodel-compose:2.8.7",
        "androidx.lifecycle:lifecycle-runtime-compose:2.8.7",
        "androidx.lifecycle:lifecycle-process:2.8.7",
        "androidx.navigation:navigation-compose:2.8.5",
        "androidx.core:core-ktx:1.15.0",
        "com.squareup.okhttp3:okhttp:4.12.0",
        "io.coil-kt:coil-compose:2.7.0",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.7.3",
        "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.9.0",
        "io.insert-koin:koin-core:4.0.2",
        "io.insert-koin:koin-core-jvm:4.0.2",
        "io.insert-koin:koin-core-viewmodel:4.0.2",
        "io.insert-koin:koin-core-viewmodel-jvm:4.0.2",
        "io.insert-koin:koin-android:4.0.2",
        "io.insert-koin:koin-compose:4.0.2",
        "io.insert-koin:koin-compose-jvm:4.0.2",
        "io.insert-koin:koin-androidx-compose:4.0.2",
        "androidx.collection:collection:1.4.4",
        "androidx.collection:collection-jvm:1.4.4",
        "androidx.emoji2:emoji2:1.3.0",
        "androidx.lifecycle:lifecycle-livedata-core:2.8.7",
        "com.jakewharton.timber:timber:5.0.1",
        "junit:junit:4.13.2",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    excluded_artifacts = [
        # Exclude JetBrains Compose Multiplatform bridge artifacts that conflict
        # with our direct AndroidX Compose dependencies. These are KMP wrappers
        # pulled in transitively by Koin and Coil that pin to older AndroidX versions.
        "org.jetbrains.compose.foundation:foundation",
        "org.jetbrains.compose.foundation:foundation-android",
        "org.jetbrains.compose.ui:ui",
        "org.jetbrains.compose.ui:ui-android",
        "org.jetbrains.compose.runtime:runtime",
        "org.jetbrains.compose.runtime:runtime-android",
        "org.jetbrains.compose.animation:animation",
        "org.jetbrains.compose.animation:animation-android",
        "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel",
        "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-savedstate",
        "org.jetbrains.androidx.lifecycle:lifecycle-runtime",
        "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose",
        "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose",
        "org.jetbrains.androidx.navigation:navigation-compose",
    ],
    fail_if_repin_required = False,
    use_starlark_android_rules = True,
    version_conflict_policy = "pinned",
)
use_repo(maven, "android_maven")
