filegroup(
    name = "favicon_svg",
    srcs = ["favicon.svg"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "image_svg",
    srcs = ["image.svg"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "app_icon",
    srcs = ["app-icon.png"],
    visibility = ["//visibility:public"],
)
