sh_binary(
    name = "generate-favicon",
    srcs = ["generate-favicon.sh"],
    data = [
        "@host_tools//:magick",
        "@host_tools//:rsvg_convert",
    ],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)

sh_binary(
    name = "deploy",
    srcs = ["deploy.sh"],
    args = [
        "$(location //:image_load)",
    ],
    data = [
        "//:fly.toml",
        "//:image_load",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
