load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "canyon_route.go",
        "healthcheck_router.go",
        "image_route.go",
        "metrics_middleware.go",
        "server.go",
        "version.go",
        "version_route.go",
    ],
    importpath = "github.com/stefanpenner/lcc-live/server",
    visibility = ["//visibility:public"],
    deps = [
        "//metrics",
        "//store",
        "//style",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_test(
    name = "server_test",
    srcs = [
        "server_fuzz_test.go",
        "server_test.go",
        "version_route_test.go",
    ],
    embed = [":server"],
    deps = [
        "//store",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
