load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "server",
    srcs = [
        "camera_route.go",
        "canyon_route.go",
        "healthcheck_router.go",
        "image_route.go",
        "json_helpers.go",
        "metrics_middleware.go",
        "server.go",
        "udot_route.go",
        "version.go",
        "version_route.go",
    ],
    importpath = "github.com/stefanpenner/lcc-live/server",
    visibility = ["//visibility:public"],
    deps = [
        "//metrics",
        "//store",
        "@com_github_cespare_xxhash_v2//:xxhash",
        "@com_github_charmbracelet_lipgloss//:lipgloss",
        "@com_github_getsentry_sentry_go_echo//:echo",
        "@com_github_labstack_echo_v4//:echo",
        "@com_github_labstack_echo_v4//middleware",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
    ],
)

go_test(
    name = "server_test",
    srcs = [
        "server_fuzz_test.go",
        "server_test.go",
        "version_route_test.go",
    ],
    embed = [":server"],
    deps = [
        "//store",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
