# Generate favicon.png from SVG using the script
genrule(
    name = "favicon",
    srcs = [
        "//assets:favicon_svg",
    ],
    outs = ["favicon.png"],
    cmd = """
        $(execpath //scripts:generate-favicon) \
            $(location //assets:favicon_svg) \
            $(location :favicon.png)
    """,
    tags = [
        "local",
        "no-remote",
    ],  # Requires local tools, don't run remotely
    tools = ["//scripts:generate-favicon"],
    visibility = ["//visibility:public"],
)

# Generate og-image.png from SVG for social media sharing
genrule(
    name = "og_image",
    srcs = [
        "//assets:favicon_svg",
    ],
    outs = ["og-image.png"],
    cmd = """
        $(execpath //scripts:generate-share-image) \
            $(location //assets:favicon_svg) \
            $(location :og-image.png)
    """,
    tags = [
        "local",
        "no-remote",
    ],  # Requires local tools, don't run remotely
    tools = ["//scripts:generate-share-image"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "static_files",
    srcs = glob(
        ["**/*"],
        exclude = [
            "BUILD.bazel",
        ],
    ) + [":favicon", ":og_image"],
    visibility = ["//visibility:public"],
)
