load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

go_library(
    name = "web_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner/lcc-live/web",
    visibility = ["//visibility:private"],
    deps = [
        "//web/logger",
        "//web/server",
        "//web/store",
        "//web/udot",
        "//web/ui",
        "@com_github_getsentry_sentry_go//:sentry-go",
        "@org_golang_x_sync//errgroup",
    ],
)

# Bundle data files with the binary
filegroup(
    name = "runtime_files",
    srcs = [
        "//:data.json",
        "//web/static:static_files",
        "//web/templates:template_files",
    ],
)

go_binary(
    name = "lcc-live",
    data = [":runtime_files"],
    embed = [":web_lib"],
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/stefanpenner/lcc-live/web/server.Version": "{STABLE_GIT_COMMIT}",
        "github.com/stefanpenner/lcc-live/web/server.BuildTime": "{BUILD_TIMESTAMP}",
    },
)

# Linux binary for container builds
go_binary(
    name = "lcc-live-linux",
    embed = [":web_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
    x_defs = {
        "github.com/stefanpenner/lcc-live/web/server.Version": "{STABLE_GIT_COMMIT}",
        "github.com/stefanpenner/lcc-live/web/server.BuildTime": "{BUILD_TIMESTAMP}",
    },
)

go_test(
    name = "web_test",
    srcs = [
        "main_test.go",
        "smoke_test.go",
    ],
    data = [":runtime_files"],
    embed = [":web_lib"],
    deps = [
        "//web/server",
        "//web/store",
        "//web/udot",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)

# Copy and rename the Linux binary for packaging
genrule(
    name = "lcc-live_renamed",
    srcs = [":lcc-live-linux"],
    outs = ["bin/lcc-live"],
    cmd = "cp $< $@",
    tags = ["manual"],
)

# Package the binary into a tar layer
pkg_tar(
    name = "lcc-live_layer",
    srcs = [":lcc-live_renamed"],
    mode = "0755",
    package_dir = "/usr/local/bin",
    strip_prefix = "bin",
    tags = ["manual"],
)

# Package runtime files (data, static, templates) into a tar layer
# Files maintain their directory structure (static/, templates/, data.json)
pkg_tar(
    name = "runtime_files_layer",
    srcs = [":runtime_files"],
    package_dir = "/usr/local/bin",
    strip_prefix = "/",
    tags = ["manual"],
)

# Build OCI image
oci_image(
    name = "image",
    base = "@alpine_linux_amd64",
    entrypoint = ["/usr/local/bin/lcc-live"],
    env = {
        "PORT": "3000",
    },
    exposed_ports = ["3000/tcp"],
    tags = ["manual"],
    tars = [
        ":lcc-live_layer",
        ":runtime_files_layer",
    ],
    # Security: Run as unprivileged user
    user = "nobody",
    workdir = "/usr/local/bin",
)

# Load into local Docker daemon
oci_load(
    name = "image_load",
    image = ":image",
    repo_tags = ["lcc.live:latest"],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

# Push to registry (for Fly.io deployment)
oci_push(
    name = "image_push",
    image = ":image",
    repository = "registry.fly.io/lcc-live-dark-paper-70",
    tags = ["manual"],
)

# Export fly.toml for use in scripts
exports_files(
    ["fly.toml"],
    visibility = ["//visibility:public"],
)

# Deployment script (defined in //web/scripts:deploy)
# Use: bazel run //web/scripts:deploy

# Container integration test
# Tests that the built OCI image actually works
sh_test(
    name = "container_test",
    srcs = ["test_container.sh"],
    data = [":image_load"],
    tags = [
        "integration",  # Integration test
        "local",  # Requires local Docker daemon
        "no-remote",
        "no-remote-exec",  # Explicitly prevent RBE execution
    ],
)
