load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "seed-neon_lib",
    srcs = ["main.go"],
    importpath = "github.com/stefanpenner/lcc-live/cmd/seed-neon",
    visibility = ["//visibility:private"],
    deps = [
        "//neon",
        "//store",
        "@com_github_jackc_pgx_v5//:pgx",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)

go_binary(
    name = "seed-neon",
    embed = [":seed-neon_lib"],
    visibility = ["//visibility:public"],
)
