sh_binary(
    name = "deploy",
    srcs = ["deploy.sh"],
    args = [
        "$(location //web:image_load)",
    ],
    data = [
        "//web:fly.toml",
        "//web:image_load",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_tools//tools/bash/runfiles"],
)
