load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "udot",
    srcs = [
        "client.go",
        "filters.go",
        "poller.go",
    ],
    importpath = "github.com/stefanpenner/lcc-live/web/udot",
    visibility = ["//visibility:public"],
    deps = [
        "//web/logger",
        "//web/store",
    ],
)
